# boltr-bldr

./: .gitignore  Boltr_bldr_go  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/boltr-cli/: Cargo.toml
crates/boltr-cli/src/: main.rs
crates/boltr-cli/tests/: status.rs
crates/boltr-core/: Cargo.toml
crates/boltr-core/src/: artifact.rs  emit.rs  error.rs  lib.rs  normalize.rs  pipeline.rs  store.rs
crates/boltr-core/src/ingest/: mod.rs  pdb_client.rs  uniprot_client.rs
crates/boltr-core/src/models/: af3_input.rs  artifact.rs  boltr.rs  mod.rs  pdb.rs  uniprot.rs
crates/boltr-web/: Cargo.toml
crates/boltr-web/src/: handlers.rs  main.rs  routes.rs
crates/boltr-web/static/: app.js  index.html  style.css
docs/: PROJECT_README.md  activity.md
tasks/: todo.md
