[workspace]
resolver = "2"
members = [
    "crates/boltr-core",
    "crates/boltr-cli",
    "crates/boltr-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SampleBias/boltr-bldr"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Async / HTTP
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
walkdir = "2"
zip = "2"
