[package]
name = "boltr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boltr-cli"
path = "src/main.rs"

[dependencies]
boltr-core = { path = "../boltr-core" }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
