[package]
name = "boltr-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boltr-web"
path = "src/main.rs"

[dependencies]
boltr-core = { path = "../boltr-core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
chrono = { workspace = true }
uuid = { workspace = true }
